--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "textract": "^2.4.0",
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "textract": "^2.5.0"
   }
 }
