--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "axios": "^0.24.0",
     "inquirer": "^8.2.0",
+    "openai": "^4.13.0",
     "pdf-parse": "^1.1.1"
   }
 }
